Conda env should now build with CUDA PyTorch instead of CPU

--- a/environment.yml
+++ b/environment.yml
@@ -2,13 +2,15 @@ name: sparse-tokens
 channels:
   - conda-forge
   - pytorch
+  - nvidia
 dependencies:
   - python=3.10
   - pip
-  - pytorch
-  - torchvision
   - numpy
   - scikit-learn
+  - pytorch=*=*cuda*
+  - torchvision
+  - pytorch-cuda=11.8
   - pip:
     - torchshow
     - python-sensors
