--- a/environment.yml
+++ b/environment.yml
@@ -8,8 +8,8 @@ dependencies:
   - pip
   - numpy
   - scikit-learn
-  - pytorch=*=*cuda*
-  - torchvision
+  - pytorch=2.1
+  - torchvision=0.16
   - pytorch-cuda=11.8
   - pip:
     - torchshow
